Fixed again text overflow

--- a/NewsSite/src/app/news/news.component.css
+++ b/NewsSite/src/app/news/news.component.css
@@ -6,5 +6,9 @@ img{
  #card:hover{color:red;}
  div {
     
-    overflow: hidden;
+    white-space:inherit;
 }
+ #degistirici
+ {
+    cursor:pointer;
+ }
